添加功能修改

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,6 @@
     </filter-mapping>
     
     <welcome-file-list>
-        <welcome-file>/WEB-INF/jsp/main.jsp</welcome-file>
+        <welcome-file>/WEB-INF/jsp/customer/cmain.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
